kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: solar-system
  name: solar-system
  namespace: solar-system
spec:
  selector:
    matchLabels:
      app: solar-system
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      imagePullSecrets:
      - name: my-ecr-registry-key
      containers:
      - name: solar-system
        image: 400014682771.dkr.ecr.us-east-2.amazonaws.com/orbit-engine:3e906e3be059342b1916f020c034344fb267ddca
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http 
          protocol: TCP
